--- a/index.html
+++ b/index.html
@@ -1,8 +1,38 @@
 <html>
     <head>
+        <link rel = "stylesheet" href = "./style.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     </head>
     <body>
+        <div class = "header">
+            <div class = "left_box">
+                <a>About</a>
+                <a>Store</a>
+            </div>
+            <div class = "right_box">
+                <a>Gmail</a>
+                <a>Images</a>
+                <span class = "material-icons">apps</span>
+                <span class = "material-icons">account_circle</span>
+                
+            </div>
+        </div>
+        <div class = "main">
+            <img src = "img/google.png">
+            <div class = "search">
+                <div class = "search_input">
+                    <span class = "material-icons">search</span>
+                    <input type = "text" />
+                    <span class = "material-icons">mic</span>
+                </div>
 
+                <div class = "search_buttons">
+                    <button>Google Search</button>
+                    <button>I'm Feeling Lucky</button>
+
+                </div>
+
+            </div>
+        </div>
     </body>
 </html>
